--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -1,7 +1,24 @@
+/* ===== GENERAL RESET & SCROLLBAR ===== */
 * {
     touch-action: manipulation;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f2d9bb;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #bd9a79;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #f2d9bb;
+}
+
+
+/* ===== BODY & LAYOUT ===== */
 body {
     display: flex;
     flex-direction: column;
@@ -9,26 +26,6 @@ body {
     height: 100vh;
     background-color: #bd9a79;
     color: #433120;
-}
-
-.top-icons {
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 1000;
-    display: flex;
-    gap: 10px;
-}
-
-.top-icons button {
-    border: none;
-    background: none;
-    cursor: pointer;
-}
-
-.top-icons img {
-    width: 40px;
-    height: 40px;
 }
 
 .container {
@@ -53,6 +50,15 @@ body {
     grid-template-columns: repeat(60, 1fr);
 }
 
+.gridExpand .container {
+    width: calc(70 * 14.4px);
+}
+
+.gridExpand .grid {
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(70, 1fr);
+}
+
 .cell {
     width: 14.4px;
     height: 14.4px;
@@ -60,13 +66,14 @@ body {
     border: 1px solid;
 }
 
+
+/* ===== BUILDING ===== */
 .building {
     position: absolute;
     user-select: none;
     z-index: 1;
     border: 1px solid black;
     color: white;
-    align-content: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -75,72 +82,50 @@ body {
     text-shadow: 2px 2px 4px black;
 }
 
-.slider-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+.building div {
+    word-break: break-word;
+    white-space: pre-line;
 }
 
-.slider {
-    width: 100%;
-    height: 15px;
-    border-radius: 5px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-}
 
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
-}
-
-.form-group {
-    margin-top: 15px;
-
-    color: white;
-    font-size: 25px;
-    font-weight: bolder;
-    min-height: 50px;
-}
-
-.modal-body {
-    background-color: #775036;
-    overflow: auto;
-}
-
-#color-picker {
-    margin-left: 5px;
+/* ===== MODAL WINDOWS ===== */
+.modal-backdrop {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    background-color: rgba(0, 0, 0, 0.5) !important;
 }
 
 .modal-content {
     background-color: #433120;
     color: #EAD0B2;
-    max-height: 600px;
-    min-height: 50vh;
+    max-height: 500px;
+    min-height: 500px;
     position: relative;
-}
-
-.modal-header {
-    position: sticky;
-    top: 0;
-    z-index: 1050;
-    background-color: #433120;
-    color: #EAD0B2;
-    padding: 10px;
 }
 
 .modal-header,
 .modal-footer {
     border-color: #443326;
     padding: 0%;
+}
+
+.modal-header {
+    position: sticky;
+    top: 0;
+    z-index: 1050;
+    background-color: rgb(119, 80, 54);
+    color: #EAD0B2;
+    padding: 3px;
+    display: block;
+}
+
+.modal-header.pt-2.pb-2 {
+    border-top: 1px solid #443326;
+    border-bottom: 1px solid #443326;
+    border-radius: 0;
 }
 
 .modal-title {
@@ -150,96 +135,66 @@ body {
     margin-left: 10px;
 }
 
-.btn-primary {
-    background-color: #F3C24A;
-    border-color: #F3C24A;
+.modal-body {
+    background-color: rgb(80, 59, 44);
+    overflow: auto;
 }
 
-.btn-secondary {
-    background-color: #443326;
-    border-color: #443326;
+.color-square {
+    width: 18px;
+    height: 18px;
+    display: flex;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 5px;
+    border-radius: 50%;
+    border: 1px solid black;
 }
 
-@media (min-width: 980px) {
-
-    .bottom-buttons-container .btn {
-        transform: scale(1);
-    }
-
-
-    .modal-content {
-        transform: scale(1) !important;
-    }
-
-    .mobileOnly {
-        display: block;
-    }
+.remove-building-btn,
+.settings-container .btn,
+.slot-item .btn {
+    background: none;
+    border: none;
+    color: #e0b044;
+    padding: 0;
+    font-weight: bolder;
+    font-size: 14px;
 }
 
-@media (max-width: 980px) {
-    .mobileOnly {
-        display: none;
-    }
-
-    .modal-content {
-        max-height: 520px;
-        min-height: 520px;
-        transform: scale(1.8) !important;
-    }
-
-    .grid {
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-        position: relative;
-        overflow-x: hidden;
-        overflow-y: hidden;
-        touch-action: pinch-zoom;
-    }
-
-    .container {
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-        position: relative;
-        overflow-x: hidden;
-        overflow-y: hidden;
-        touch-action: pinch-zoom;
-    }
-
-    .building {
-        position: absolute;
-        touch-action: none;
-    }
-
-    .bottom-buttons-container {
-        width: 100%;
-        justify-content: space-between;
-        padding: 2px;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: #f8f9fa;
-        z-index: 1000;
-        border-radius: 0px !important;
-    }
-
-    .bottom-buttons-container .btn {
-        flex: 1;
-        text-align: center;
-    }
+.remove-building-btn:hover,
+.settings-container .btn:hover,
+.slot-item .btn:hover {
+    color: #F3C24A;
 }
 
-@media (min-width: 576px) {
-    .container {
-        max-width: unset !important;
-    }
+.slot-item,
+.building-info {
+    background-color: rgb(145, 98, 65);
+    border-top: 1px solid #443326;
+    border-bottom: 1px solid #443326;
+    border-radius: 0;
+    display: flex;
+    align-items: center;
+    font-weight: bolder;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
+.modal-header.pt-2.pb-2 .row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+
+/* ===== BUTTONS & NAVBAR ===== */
 .bottom-buttons-container {
     background-color: #443326;
-    padding: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 2px solid rgba(234, 208, 178, 0.5);
     display: flex;
-    gap: 5px;
+    gap: 0px;
     position: fixed;
     bottom: 0px !important;
     left: 50% !important;
@@ -256,41 +211,132 @@ body {
 }
 
 .bottom-buttons-container .btn:hover {
-    color: #F3C24A;
+    color: rgb(243, 194, 74);
 }
 
-.modal {
-    position: fixed !important;
-    top: 50% !important;
-    left: 50% !important;
-    transform: translate(-50%, -50%) !important;
-    padding-right: 0 !important;
+.vr {
+    border-left: 2px solid white;
+    opacity: 50%;
 }
 
 
-.modal-backdrop {
-    position: fixed !important;
-    top: 0 !important;
-    left: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-    background-color: rgba(0, 0, 0, 0.5) !important;
+/* ===== FORMS & INPUTS ===== */
+.custom-input,
+.custom-select,
+.custom-button {
+    background-color: #f3e0c2;
+    color: #3e2a16;
+    border: 2px solid #bd9a79;
+    font-weight: bold;
+    border-radius: 8px;
 }
 
-.form-control,
-.select {
-    display: unset;
-    width: 150px;
-    background-color: #b8896a;
-    color: black;
+.custom-input::placeholder {
+    color: #8d7155;
+}
+
+.custom-input:focus,
+.custom-select:focus,
+.custom-button:focus {
+    box-shadow: 0 0 0 0.2rem rgba(243, 194, 74, 0.5);
+    border-color: #f3c24a;
+    outline: none;
+}
+
+#searchInput,
+#sortSelect,
+.btn-custom {
+    background-color: #f2d9bb !important;
+    color: #433120 !important;
+    border: 2px solid #a97c50;
+    font-weight: bold;
+}
+
+.dropdown-menu-custom {
+    background-color: #f3e0c2;
+    max-height: 300px;
+    overflow-y: auto;
+    border: 2px solid #a97c50;
+    padding: 10px;
+    border-radius: 8px;
+    min-width: 200px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+}
+
+.dropdown-menu-custom li {
+    list-style: none;
+    margin-bottom: 5px;
+}
+
+.dropdown-menu-custom .form-check-input {
+    border: 2px solid #a97c50;
+    background-color: white;
+}
+
+.dropdown-menu-custom .form-check-input:checked {
+    background-color: #f3c24a;
+    border-color: #f3c24a;
+}
+
+.dropdown-menu-custom .form-check-label {
+    color: #433120;
+    font-weight: bold;
+}
+
+.dropdown-menu-custom {
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+}
+
+.btn.dropdown-toggle::after {
+    display: none !important;
+}
+
+.custom-button .bi-funnel {
     font-weight: bolder;
-    border: 1px solid #ccc;
-    padding: 8px;
-    box-sizing: border-box;
-    border-radius: 4px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    color: #433120;
+}
+
+.save-button {
+    background-color: rgb(80, 59, 44);
+    ;
+    border: 1px solid #e0b044;
+    color: #e0b044;
+    padding: 6px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s;
+}
+
+.save-button:hover {
+    background-color: #5a3f1f;
+    color: #F3C24A;
+    border-color: #F3C24A;
+}
+
+
+.form-group {
+    margin-top: 15px;
+    color: white;
+    font-size: 25px;
+    font-weight: bolder;
+    min-height: 50px;
+}
+
+#buildingSearch,
+.slot-name {
+    background-color: #f2d9bb !important;
+    color: #433120 !important;
+    border: 2px solid #a97c50 !important;
+    font-weight: bold;
+}
+
+#buildingSearch:focus,
+#sortSelect:focus,
+.btn-custom:focus {
+    border-color: #f3c24a;
+    box-shadow: 0 0 0 0.2rem rgba(243, 194, 74, 0.25);
+    outline: none;
 }
 
 .form-control:focus,
@@ -298,6 +344,10 @@ body {
     background-color: #a77452;
     border-color: #6b4f3e;
     outline: none;
+}
+
+#color-picker {
+    margin-left: 5px;
 }
 
 #presetSizes {
@@ -314,25 +364,129 @@ body {
     font-weight: bold;
 }
 
-.modal .btn {
-    background: none;
-    border: none;
-    color: #e0b044;
-}
 
-.modal .btn:hover {
-    color: #F3C24A;
-}
-
-.color-square {
-    width: 18px;
-    height: 18px;
+/* ===== SLIDER ===== */
+.slider-container {
+    width: 100%;
     display: flex;
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-top: 5px;
+    flex-direction: column;
 }
 
+.slider {
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+
+/* ===== BOX CARDS ===== */
+.buildingList {
+    min-height: 600px !important;
+}
+
+.box {
+    display: flex;
+    align-items: stretch;
+    border-radius: 15px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    color: #000;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+    border: 2px solid white;
+    cursor: pointer;
+}
+
+.box:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+}
+
+.box-icon {
+    flex: 0 0 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 2px solid white;
+    background-color: rgb(145, 98, 65);
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+.box-icon img {
+    max-width: 60px;
+    max-height: 60px;
+    transition: transform 0.3s ease;
+}
+
+.box-content {
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    background-color: rgb(145, 98, 65);
+    min-height: 100px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.box-content h2 {
+    font-size: 18px;
+    margin: 0;
+    font-weight: bold;
+    color: white;
+    padding: 3px;
+}
+
+.box-content hr {
+    width: 100%;
+    border: 0;
+    border-top: 2px solid white;
+    opacity: 0.5;
+    margin: 0;
+    color: white;
+}
+
+.box-content p {
+    margin: 0;
+    font-size: 14px;
+    color: white;
+    padding: 3px;
+}
+
+/* ===== TOP ICONS & CREATE BUTTON ===== */
+.top-icons {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1000;
+    display: flex;
+    gap: 10px;
+}
+
+.top-icons button {
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.top-icons img {
+    width: 40px;
+    height: 40px;
+}
 
 .create-button-container {
     position: fixed;
@@ -358,6 +512,8 @@ body {
     background-color: #e0b044;
 }
 
+
+/* ===== OVERLAY & UTILS ===== */
 .overlay {
     position: fixed;
     top: 0;
@@ -373,158 +529,68 @@ body {
     font-size: 24px;
 }
 
-.bugfix1 {
-    top: 0 !important;
-    left: 0 !important;
+
+/* ===== MEDIA QUERIES ===== */
+@media (min-width: 980px) {
+    .bottom-buttons-container .btn {
+        transform: scale(1);
+    }
+
+    .modal-content {
+        transform: scale(1) !important;
+    }
+
+    .mobileOnly {
+        display: block;
+    }
 }
 
-.save-slot {
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
+@media (max-width: 980px) {
+    .mobileOnly {
+        display: none;
+    }
+
+    .modal-content {
+        max-height: 500px;
+        min-height: 500px;
+        transform: scale(1.8) !important;
+    }
+
+    .grid,
+    .container {
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
+        position: relative;
+        overflow-x: hidden;
+        overflow-y: hidden;
+        touch-action: pinch-zoom;
+    }
+
+    .building {
+        position: absolute;
+        touch-action: none;
+    }
+
+    .bottom-buttons-container {
+        width: 100%;
+        justify-content: space-between;
+        padding: 2px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        border-radius: 0px !important;
+    }
+
+    .bottom-buttons-container .btn {
+        flex: 1;
+        text-align: center;
+    }
 }
 
-.slot-name {
-    margin-right: 10px;
-    max-width: 200px;
-    flex-grow: 1;
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-    background-color: #f2d9bb;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #bd9a79;
-    border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #f2d9bb;
-}
-
-
-.gridExpand .container {
-    width: calc(70 * 14.4px);
-}
-
-.gridExpand .grid {
-    grid-template-rows: repeat(1, 1fr);
-    grid-template-columns: repeat(70, 1fr);
-}
-
-
-.buildingList {
-    min-height: 600px;
-}
-
-.box {
-    display: flex;
-    align-items: stretch;
-    border-radius: 30px;
-    margin-bottom: 10px;
-    text-decoration: none;
-    color: #000;
-    transition: box-shadow 0.3s ease, transform 0.3s ease;
-    border: 2px solid white;
-    cursor: pointer;
-}
-
-.box:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
-}
-
-.box-icon {
-    flex: 0 0 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-right: 2px solid white;
-    margin: 0;
-    background-color: rgb(145, 98, 65);
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-}
-
-.box-icon img {
-    max-width: 60px;
-    max-height: 60px;
-    transition: transform 0.3s ease;
-}
-
-.box-content {
-    flex: 1;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-    position: relative;
-    background-color: rgb(145, 98, 65);
-    min-height: 100px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-}
-
-.box-content h2 {
-    font-size: 18px;
-    margin: 0;
-    font-weight: bold;
-    color: white;
-}
-
-.box-content hr {
-    width: 100%;
-    border: 0;
-    border-top: 2px solid white;
-    margin: 2px 0 5px;
-}
-
-.box-content p {
-    margin: 0;
-    font-size: 14px;
-    color: white;
-}
-
-.dropdown-menu {
-    background-color: #433120;
-}
-
-.dropdown-item {
-    color: #e0b044;
-}
-
-.modal-header .d-flex {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-}
-
-.modal-header .dropdown {
-    margin-right: 10px;
-}
-
-.modal-header .btn {
-    margin-left: 5px;
-}
-
-.modal-header .d-flex {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-}
-
-.modal-header .dropdown {
-    margin-right: 10px;
-}
-
-.modal-header .btn {
-    margin-left: 5px;
-}
-
-.building div {
-    word-break: break-word;
-    white-space: pre-line;
+@media (min-width: 576px) {
+    .container {
+        max-width: unset !important;
+    }
 }
