--- a/decorations/styles.css
+++ b/decorations/styles.css
@@ -426,47 +426,24 @@ h1 {
     padding: 5px;
 }
 
-/* --- ERROR MESSAGES --- */
-.error-message {
-    background-color: #f8d7da;
-    color: #842029;
-    border: 1px solid #f5c2c7;
-    border-radius: 8px;
-    padding: 10px;
-    max-width: 600px;
-    margin: 20px auto;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.error-message h3 {
-    margin-top: 0;
-    font-weight: bold;
-}
-
-.error-message a {
-    color: #842029;
-    text-decoration: underline;
-}
-
-#errorCountdown {
-    font-weight: bold;
-    font-size: 24px;
-    margin-top: 10px;
-}
-
 /* Progress bar */
 .loading-message {
     text-align: center;
-    padding: 20px;
-    padding-top: 10px;
+    padding: 5px;
     background: #222;
     color: #eee;
     background-color: rgb(145, 98, 65);
     border-radius: 10px;
     border: 2px solid white;
     margin-top: 3px;
+    min-height: 120px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.loading-message p {
+    margin-bottom: 0;
 }
 
 .loading-message h3 {
