--- a/decorations/styles.css
+++ b/decorations/styles.css
@@ -94,15 +94,20 @@ h1 {
     font-weight: bold;
     color: white;
     color: #F3C24A;
+    padding: 2px;
 }
 
 .box-content hr {
     width: 100%;
     border: 0;
-    border-top: 2px solid white;
-    opacity: 0.5;
+    border-top: 1px solid white;
+    opacity: 1;
     margin: 0;
     color: white;
+}
+
+.border-end {
+    border-right: 1px solid white !important;
 }
 
 .box-content p {
@@ -276,13 +281,16 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 0;
+    height: 100%;
+    overflow: hidden;
 }
 
 .card-image {
     max-width: 100%;
-    max-height: 160px;
+    max-height: 140px;
     object-fit: contain;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 .image-modal {
@@ -347,6 +355,18 @@ h1 {
     opacity: 1;
 }
 
+.effect-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin-right: 2px;
+}
+
+.bi-zoom-in {
+    font-size: 1.2rem;
+    color: white;
+}
+
 /* --- CARD TABLES --- */
 .card-table {
     width: 100%;
@@ -370,10 +390,6 @@ h1 {
     font-style: italic;
     color: rgb(234, 224, 224);
     font-size: 12px;
-}
-
-.deco-title {
-    padding: 5px;
 }
 
 @media (max-width: 768px) {
@@ -446,7 +462,7 @@ h1 {
     background-color: rgb(145, 98, 65);
     border-radius: 10px;
     border: 2px solid white;
-    margin-top: 3px;
+    margin-top: 4px;
     min-height: 120px;
     justify-content: center;
     display: flex;
