--- a/decorations/styles.css
+++ b/decorations/styles.css
@@ -100,8 +100,8 @@ h1 {
 .box-content hr {
     width: 100%;
     border: 0;
-    border-top: 1px solid white;
-    opacity: 1;
+    border-top: 1px solid white !important;
+    opacity: 1 !important;
     margin: 0;
     color: white;
 }
@@ -357,7 +357,7 @@ h1 {
 
 .effect-icon {
     width: 20px;
-    height: 20px;
+    height: auto;
     vertical-align: middle;
     margin-right: 2px;
 }
@@ -376,7 +376,7 @@ h1 {
 }
 
 .card-cell {
-    padding: 2px 0;
+    padding: 1px 0;
 }
 
 .card-section-title {
