--- a/building_items/styles.css
+++ b/building_items/styles.css
@@ -92,7 +92,9 @@ h1 {
     font-size: 18px;
     margin: 0;
     font-weight: bold;
+    color: white;
     color: #F3C24A;
+    padding: 2px;
 }
 
 .box-content p {
@@ -113,8 +115,8 @@ h1 {
 .box-content hr {
     width: 100%;
     border: 0;
-    border-top: 2px solid white;
-    opacity: 0.5;
+    border-top: 1px solid white !important;
+    opacity: 1 !important;
     margin: 0;
     color: white;
 }
@@ -280,8 +282,10 @@ h1 {
 
 .card-image {
     max-width: 100%;
-    max-height: 160px;
+    max-height: 120px;
     object-fit: contain;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 .image-modal {
@@ -418,7 +422,6 @@ h1 {
     justify-content: space-between;
     align-items: center;
     background-color: #7b5a3b;
-    padding: 6px 12px;
     border-radius: 8px 8px 0 0;
     border-bottom: 2px solid #ffffff;
     color: #f3c24a;
@@ -476,7 +479,7 @@ h1 {
 
 /* --- CARD EFFECTS AND SOURCES --- */
 .card-effects,
-.card-sources {
+.card-sources{
     padding: 5px;
 }
 
@@ -486,8 +489,7 @@ h1 {
     color: #e2b33d;
     text-align: center;
     padding: 2rem;
-    border: 1px solid #ccc;
-    border-radius: 6px;
+    font-weight: bold;
     user-select: none;
 }
 
@@ -500,7 +502,7 @@ h1 {
     background-color: rgb(145, 98, 65);
     border-radius: 10px;
     border: 2px solid white;
-    margin-top: 3px;
+    margin-top: 4px;
     min-height: 120px;
     justify-content: center;
     display: flex;
